manifests/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: resource-webhook
webhooks:
  - name: resource-webhook.default.svc.cluster.local
    admissionReviewVersions:
      - "v1"
    sideEffects: "None"
    timeoutSeconds: 30
    objectSelector:
      matchLabels:
        resource-webhook-enabled: "true"
    clientConfig:
      service:
        name: resource-webhook
        namespace: default
        path: "/mutate"
        port: 8080
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUVZRENDQTBpZ0F3SUJBZ0lVS1Y2WG80U1pMTW1KdCtHL250WmRWQXMwZlQ0d0RRWUpLb1pJaHZjTkFRRUwKQlFBd1V6RUxNQWtHQTFVRUJoTUNRMDR4Q3pBSkJnTlZCQWdNQWtkRU1Rc3dDUVlEVlFRSERBSlRXakVUTUJFRwpBMVVFQ2d3S1FXTnRaU3dnU1c1akxqRVZNQk1HQTFVRUF3d01RV050WlNCU2IyOTBJRU5CTUI0WERUSTBNREl5Ck56QTVNVGd3T0ZvWERUSTFNREl5TmpBNU1UZ3dPRm93Y1RFTE1Ba0dBMVVFQmhNQ1EwNHhDekFKQmdOVkJBZ00KQWtkRU1Rc3dDUVlEVlFRSERBSlRXakVUTUJFR0ExVUVDZ3dLUVdOdFpTd2dTVzVqTGpFek1ERUdBMVVFQXd3cQpjbVZ6YjNWeVk [...]
    rules:
      - operations: [ "CREATE" ]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
